--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <span class="pizda">Beznadegnoooo</span>
+    <span class="pizda">Beznadegnoo</span>
 
 </body>
 </html>
